--- a/sail_away/pubspec.yaml
+++ b/sail_away/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   firebase_core: ^3.8.0
   firebase_data_connect: ^0.1.2+4
   cupertino_icons: ^1.0.8
+  flutter_native_splash: ^2.4.3
+  cloud_firestore: ^5.5.0
 
 dev_dependencies:
   flutter_test:
