--- a/sail_away/pubspec.yaml
+++ b/sail_away/pubspec.yaml
@@ -16,6 +16,10 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_native_splash: ^2.4.3
   cloud_firestore: ^5.5.0
+  firebase_auth: ^5.3.4
+  bloc: ^8.1.4
+  flutter_bloc: ^8.1.6
+
 
 dev_dependencies:
   flutter_test:
