--- a/sail_away/pubspec.yaml
+++ b/sail_away/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   firebase_auth: ^5.3.4
   bloc: ^8.1.4
   flutter_bloc: ^8.1.6
+  flutter_secure_storage: ^9.2.2
+  intl: ^0.19.0
 
 
 dev_dependencies:
